--- a/modules/talk/eliza_bot/pom.xml
+++ b/modules/talk/eliza_bot/pom.xml
@@ -21,6 +21,17 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <repositories>
+        <repository>
+            <id>google-api-services</id>
+            <url>https://oss.sonatype.org/content/repositories/releases/</url>
+        </repository>
+        <repository>
+            <id>google-api-services-beta</id>
+            <url>http://google-api-client-libraries.appspot.com/mavenrepo</url>
+        </repository>
+    </repositories>
+
     <dependencies>
         <!-- for testing -->
         <dependency>
@@ -34,11 +45,32 @@
            <artifactId>joda-time</artifactId>
            <version>2.2</version>
        </dependency> 
-          <dependency>
-              <groupId>com.googlecode.json-simple</groupId>
-              <artifactId>json-simple</artifactId>
-              <version>1.1.1</version>
-          </dependency>
+       <dependency>
+           <groupId>com.googlecode.json-simple</groupId>
+           <artifactId>json-simple</artifactId>
+           <version>1.1.1</version>
+       </dependency>
+       <dependency>
+           <groupId>com.google.apis</groupId>
+           <artifactId>google-api-servies-customsearch</artifactId>
+           <version>v1-rev21-1.15.0-rc</version>    
+       </dependency>  
+       
+       <dependency>
+           <groupId>com.google.api-client</groupId>
+           <artifactId>google-api-client-java6</artifactId>
+           <version>1.15.0-rc</version>
+       </dependency>
+       <dependency>
+           <groupId>com.google.oauth-client</groupId>
+           <artifactId>google-oauth-client-jetty</artifactId>
+           <version>1.15.0-rc</version>
+       </dependency>
+       <dependency>
+           <groupId>com.google.http-client</groupId>
+           <artifactId>google-http-client-jackson2</artifactId>
+           <version>1.15.0-rc</version>
+       </dependency>
     </dependencies>
 
 
