add redirecting-msg feature

--- a/.bot.cfg
+++ b/.bot.cfg
@@ -1,9 +1,19 @@
 NICK oontvoo
 USER oontvoo oontvoo oontvoo : oontvoo
 JOIN #interns
-PONG :184FE93D
+PONG :F1911019
 JOIN #interns
-PRIVMSG Vy_ :Vy_: It is 09:03:38, but you should start getting your own clock!
-PRIVMSG Vy_ :Vy_: In what way?
-PRIVMSG Vy_ :Vy_: 75.9 F (24.4 C) [feels like 75.9 F (24.4 C)], Clear in Newton, MA
+PRIVMSG vy :vy: Done adding you to the mailing-list
+PONG :irc.tripadvisor.com
+PONG :irc.tripadvisor.com
+PONG :irc.tripadvisor.com
+MODE #interns +o Javi
+PRIVMSG vy :vy: Done adding you to the mailing-list
+PONG :irc.tripadvisor.com
+PRIVMSG #interns :vy: Done adding you to the mailing-list
+PONG :irc.tripadvisor.com
+PONG :irc.tripadvisor.com
+PRIVMSG #interns :azhu1: Done adding you to the mailing-list
+PONG :irc.tripadvisor.com
+PONG :irc.tripadvisor.com
 PONG :irc.tripadvisor.com
