--- a/modules/send/send_bot/pom.xml
+++ b/modules/send/send_bot/pom.xml
@@ -3,10 +3,10 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.tripadvisor</groupId>
-    <artifactId>eliza-bot</artifactId>
+    <artifactId>send-bot</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
-    <name>eliza-bot</name>
+    <name>send-bot</name>
 
     <developers>
         <developer>
@@ -77,7 +77,7 @@
                     </descriptorRefs>
                     <archive>
                         <manifest>
-                            <mainClass>eliza.ElizaApp</mainClass>
+                            <mainClass>send_bot.Main</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
