--- a/bot.properties
+++ b/bot.properties
@@ -1,5 +1,5 @@
-server="irc.tripadvisor.com"
-channel="interns"
-nick="oontvoo"
-user="oontvoo oontvoo oontvoo : oontvoo"
+server="<your irc server>"
+channel="<channel>"
+nick="<name for the bot>"
+user="<nick> <nick> <nick> : <nick>"
 
